Adding Resume Section

--- a/KND.html
+++ b/KND.html
@@ -236,13 +236,12 @@
 						<div class="section_title_container">
 							<div class="section_subtitle">Some music from my</div>
 							<div class="section_title">
-								<h1>Bandcamp</h1>
+								<h1>Bandcamp and Soundcloud Accounts</h1>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="row shows_row">
-
 					<!-- Shows List -->
 					<div class="col-lg-8 order-lg-1 order-2 shows_list_col">
 						<div class="shows_list_container">
@@ -266,10 +265,55 @@
 							<img src="images/shows.jpg" alt="https://unsplash.com/@anthonydelanoix">
 						</div>
 					</div>
-
 				</div>
 			</div>
 		</div>
+
+		<!-- Shows -->
+		<div class="shows">
+			<div class="container">
+				<div class="row" style="z-index:10;">
+					<div class="col">
+						<div class="section_title_container">
+							<div class="section_subtitle"></div>
+							<div class="section_title">
+								<h1></h1>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row shows_row">
+					<!-- Shows List -->
+					<div class="col-lg-8 order-lg-1 order-2 shows_list_col">
+						<div class="shows_list_container">
+							<ul class="shows_list">
+								<iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
+									src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1089948550&color=%23474747&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+								<div
+									style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+									<a href="https://soundcloud.com/k-n-d" title="Mauricio Drada Dávila aka KND"
+										target="_blank" style="color: #cccccc; text-decoration: none;">Mauricio Drada
+										Dávila aka KND</a> · <a href="https://soundcloud.com/k-n-d/sets/my-favorites"
+										title="Best of KND" target="_blank"
+										style="color: #cccccc; text-decoration: none;">Best of KND
+									</a>
+								</div>
+							</ul>
+						</div>
+					</div>
+
+					<!-- Shows Image -->
+					<div class="col-lg-4 order-lg-2 order-1">
+						<div class="shows_image">
+							<div class="image_overlay"></div>
+							<img src="" alt="Trance Force Cover">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		
 
 		<!-- Artist -->
 		<div class="artist">
