--- a/music.html
+++ b/music.html
@@ -29,7 +29,7 @@
 				<nav class="main_nav">
 					<ul class="d-flex flex-row align-items-start justify-content-start">
 						<li><a href="KND.html">Home</a></li>
-						<li class="active"><a href="about.html">Music</a></li>
+						<li class="active"><a href="music.html">Music</a></li>
 						<li><a href="#">----</a></li>
 						<li><a href="#">----</a></li>
 						<li><a href="index.html">Resume</a></li>
@@ -183,6 +183,21 @@
 
 		<!-- Footer -->
 		<footer class="footer">
+			<!-- Single Info -->
+			<div class="col-lg-5">
+				<div class="single_info">
+					<div class="logo_list d-flex flex-row align-items-center justify-content-start flex-wrap">
+						<div><a href="https://www.beatport.com/artist/k-n-d/400425/tracks" target="_blank"><img
+									src="images/logo_1.png" alt=""></a></div>
+						<div><a href="https://soundcloud.com/k-n-d" target="_blank"><img src="images/logo_2.png"
+									alt=""></a></div>
+						<div><a href="https://mauriciodradaknd.bandcamp.com/" target="_blank"><img
+									src="images/logo_3.png" alt=""></a></div>
+						<div><a href="https://open.spotify.com/artist/1qiGwPf5UswgSQYJ3w84nc?si=DcYUPeJBTJeKw6gEUKh6jg"
+								target="_blank"><img src="images/logo_4.png" alt=""></a></div>
+					</div>
+				</div>
+			</div>
 			<div class="copyright_bar">
 				<span>Copyright &copy;
 					<script>document.write(new Date().getFullYear());</script> All rights reserved | Music and
