--- a/KND.html
+++ b/KND.html
@@ -478,7 +478,7 @@
 									src="images/logo_1.png" alt=""></a></div>
 						<div><a href="https://soundcloud.com/k-n-d" target="_blank"><img src="images/logo_2.png"
 									alt=""></a></div>
-						<div><a href="https://mauriciodradaknd.bandcamp.com/" target="_blank"><img
+						<div><a href="https://soundcloud.com/mauricio-drada-knd" target="_blank"><img
 									src="images/logo_3.png" alt=""></a></div>
 						<div><a href="https://open.spotify.com/artist/1qiGwPf5UswgSQYJ3w84nc?si=DcYUPeJBTJeKw6gEUKh6jg"
 								target="_blank"><img src="images/logo_4.png" alt=""></a></div>
