Updating Soundcloud urls

--- a/KND.html
+++ b/KND.html
@@ -79,9 +79,9 @@
 								class="home_container_inner d-flex flex-column align-items-center justify-content-center">
 								<div class="home_content text-center">
 									<div class="home_title">
-										<h1>Icy Objects</h1>
+										<h1>Visión</h1>
 									</div>
-									<div class="home_link"><a href="https://soundcloud.com/k-n-d/icy-objects"
+									<div class="home_link"><a href="https://soundcloud.com/mauricio-drada-knd/vision"
 											target="_blank">Listen on Soundcloud</a></div>
 								</div>
 							</div>
@@ -96,9 +96,9 @@
 								class="home_container_inner d-flex flex-column align-items-center justify-content-center">
 								<div class="home_content text-center">
 									<div class="home_title">
-										<h1>DLPHC</h1>
+										<h1>Hope</h1>
 									</div>
-									<div class="home_link"><a href="https://soundcloud.com/k-n-d/dlphc"
+									<div class="home_link"><a href="https://soundcloud.com/mauricio-drada-knd/hope"
 											target="_blank">Listen on Soundcloud</a></div>
 								</div>
 							</div>
@@ -113,9 +113,9 @@
 								class="home_container_inner d-flex flex-column align-items-center justify-content-center">
 								<div class="home_content text-center">
 									<div class="home_title">
-										<h1>Dark Age</h1>
+										<h1>Trance Force</h1>
 									</div>
-									<div class="home_link"><a href="https://soundcloud.com/k-n-d/dark-age"
+									<div class="home_link"><a href="https://soundcloud.com/mauricio-drada-knd/trance-force"
 											target="_blank">Listen on Soundcloud</a></div>
 								</div>
 							</div>
