--- a/KND.html
+++ b/KND.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link rel="shortcut icon" href="images/logo_title.ico" />
-	<title>KND</title>
+	<title>K.N.D.</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Electronic Music">
@@ -22,7 +22,7 @@
 		<!-- Header -->
 		<header class="header">
 			<div class="header_content d-flex flex-row align-items-center justify-content-center">
-				<div class="logo"><a href="KND.html">KND</a></div>
+				<div class="logo"><a href="KND.html">K.N.D.</a></div>
 				<div class="log_reg">
 					<ul class="d-flex flex-row align-items-start justify-content-start"></ul>
 				</div>
@@ -79,10 +79,10 @@
 								class="home_container_inner d-flex flex-column align-items-center justify-content-center">
 								<div class="home_content text-center">
 									<div class="home_title">
-										<h1>Visión</h1>
+										<h1>Muscida</h1>
 									</div>
-									<div class="home_link"><a href="https://soundcloud.com/mauricio-drada-knd/vision"
-											target="_blank">Listen on Soundcloud</a></div>
+									<div class="home_link"><a href="https://open.spotify.com/track/1VLNiPDTTaRZNySGMsukbM"
+											target="_blank">Listen on Spotify</a></div>
 								</div>
 							</div>
 						</div>
