--- a/KND.html
+++ b/KND.html
@@ -73,7 +73,7 @@
 
 					<!-- Slide -->
 					<div class="owl-item">
-						<div class="background_image" style="background-image:url(images/index.jpg)"></div>
+						<div class="background_image" style="background-image:url(images/MUSCIDA.png)"></div>
 						<div class="home_container">
 							<div
 								class="home_container_inner d-flex flex-column align-items-center justify-content-center">
