--- a/KND.html
+++ b/KND.html
@@ -78,9 +78,9 @@
 							<div
 								class="home_container_inner d-flex flex-column align-items-center justify-content-center">
 								<div class="home_content text-center">
-									<div class="home_title">
+									<!--<div class="home_title">
 										<h1>Muscida</h1>
-									</div>
+									</div>-->
 									<div class="home_link"><a href="https://open.spotify.com/track/1VLNiPDTTaRZNySGMsukbM"
 											target="_blank">Listen on Spotify</a></div>
 								</div>
