--- a/KND.html
+++ b/KND.html
@@ -96,10 +96,10 @@
 								class="home_container_inner d-flex flex-column align-items-center justify-content-center">
 								<div class="home_content text-center">
 									<div class="home_title">
-										<h1>Hope</h1>
+										<h1>Zeta Draconis</h1>
 									</div>
-									<div class="home_link"><a href="https://soundcloud.com/mauricio-drada-knd/hope"
-											target="_blank">Listen on Soundcloud</a></div>
+									<div class="home_link"><a href="https://open.spotify.com/track/5JBHKjlpKaN9bRgfEo1Fwm"
+											target="_blank">Listen on Spotify</a></div>
 								</div>
 							</div>
 						</div>
