--- a/KND.html
+++ b/KND.html
@@ -90,7 +90,7 @@
 
 					<!-- Slide -->
 					<div class="owl-item">
-						<div class="background_image" style="background-image:url(images/index_2.png)"></div>
+						<div class="background_image" style="background-image:url(images/Zeta_Draconis_Cover.png)"></div>
 						<div class="home_container">
 							<div
 								class="home_container_inner d-flex flex-column align-items-center justify-content-center">
