--- a/KND.html
+++ b/KND.html
@@ -81,7 +81,8 @@
 									<div class="home_title">
 										<h1>Muscida</h1>
 									</div>
-									<div class="home_link"><a href="https://open.spotify.com/track/1VLNiPDTTaRZNySGMsukbM"
+									<div class="home_link"><a
+											href="https://open.spotify.com/track/1VLNiPDTTaRZNySGMsukbM"
 											target="_blank">Listen on Spotify</a></div>
 								</div>
 							</div>
@@ -90,7 +91,8 @@
 
 					<!-- Slide -->
 					<div class="owl-item">
-						<div class="background_image" style="background-image:url(images/Zeta_Draconis_Cover.png)"></div>
+						<div class="background_image" style="background-image:url(images/Zeta_Draconis_Cover.png)">
+						</div>
 						<div class="home_container">
 							<div
 								class="home_container_inner d-flex flex-column align-items-center justify-content-center">
@@ -98,7 +100,8 @@
 									<div class="home_title">
 										<h1>Zeta Draconis</h1>
 									</div>
-									<div class="home_link"><a href="https://open.spotify.com/track/5JBHKjlpKaN9bRgfEo1Fwm"
+									<div class="home_link"><a
+											href="https://open.spotify.com/track/5JBHKjlpKaN9bRgfEo1Fwm"
 											target="_blank">Listen on Spotify</a></div>
 								</div>
 							</div>
@@ -115,7 +118,8 @@
 									<div class="home_title">
 										<h1>Trance Force</h1>
 									</div>
-									<div class="home_link"><a href="https://soundcloud.com/mauricio-drada-knd/trance-force"
+									<div class="home_link"><a
+											href="https://soundcloud.com/mauricio-drada-knd/trance-force"
 											target="_blank">Listen on Soundcloud</a></div>
 								</div>
 							</div>
@@ -313,7 +317,7 @@
 			</div>
 		</div>
 
-		
+
 
 		<!-- Artist -->
 		<div class="artist">
@@ -476,8 +480,8 @@
 					<div class="logo_list d-flex flex-row align-items-center justify-content-start flex-wrap">
 						<div><a href="https://www.beatport.com/artist/k-n-d/400425/tracks" target="_blank"><img
 									src="images/logo_1.png" alt=""></a></div>
-						<div><a href="https://soundcloud.com/mauricio-drada-knd" target="_blank"><img src="images/logo_2.png"
-									alt=""></a></div>
+						<div><a href="https://soundcloud.com/mauricio-drada-knd" target="_blank"><img
+									src="images/logo_2.png" alt=""></a></div>
 						<div><a href="https://soundcloud.com/mauricio-drada-knd" target="_blank"><img
 									src="images/logo_3.png" alt=""></a></div>
 						<div><a href="https://open.spotify.com/artist/1qiGwPf5UswgSQYJ3w84nc?si=DcYUPeJBTJeKw6gEUKh6jg"
