Messing with youtube videos

--- a/remixes.html
+++ b/remixes.html
@@ -90,8 +90,8 @@
 							<div class="logo_list d-flex flex-row align-items-center justify-content-start flex-wrap">
 								<div><a href="https://www.beatport.com/artist/k-n-d/400425/tracks" target="_blank"><img
 											src="images/logo_1.png" alt=""></a></div>
-								<div><a href="https://soundcloud.com/mauricio-drada-knd" target="_blank"><img src="images/logo_2.png"
-											alt=""></a></div>
+								<div><a href="https://soundcloud.com/mauricio-drada-knd" target="_blank"><img
+											src="images/logo_2.png" alt=""></a></div>
 								<div><a href="https://mauriciodradaknd.bandcamp.com/" target="_blank"><img
 											src="images/logo_3.png" alt=""></a></div>
 								<div><a href="https://open.spotify.com/artist/1qiGwPf5UswgSQYJ3w84nc?si=DcYUPeJBTJeKw6gEUKh6jg"
@@ -413,6 +413,74 @@
 							<iframe width="791" height="473" src="https://www.youtube.com/embed/vnb24tfJM6E"
 								frameborder="0"
 								allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+
+							<iframe width="1265" height="520"
+								src="https://www.youtube.com/embed/O9lR8RV3kuE?list=OLAK5uy_n2vgBPfOeevX2eOSFb-QUhPEOB-t3qDxc"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+
+							<iframe width="1265" height="520"
+								src="https://www.youtube.com/embed/1WLBtDW7bAM?list=RD1WLBtDW7bAM" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+
+							<iframe width="1265" height="520"
+								src="https://www.youtube.com/embed/l046fx4wkcM?list=RDO9lR8RV3kuE" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+
+							<iframe width="1265" height="520"
+								src="https://www.youtube.com/embed/-Xum_jDDs5w?list=OLAK5uy_lrz3oNFfpguqlGZs00IAt-Wu3cW6MLx-Q"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+
+							<iframe width="1265" height="520"
+								src="https://www.youtube.com/embed/ndIazISMLTQ?list=OLAK5uy_lrz3oNFfpguqlGZs00IAt-Wu3cW6MLx-Q"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+
+							<iframe width="1265" height="520" src="https://www.youtube.com/embed/Vev1t350qJY"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+
+							<iframe width="1265" height="520" src="https://www.youtube.com/embed/aHYB94y06lA"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+
+							<iframe width="1265" height="520" src="https://www.youtube.com/embed/tXQE7IJpF6k"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+
+							<iframe width="1265" height="520" src="https://www.youtube.com/embed/tSZccGHy_Ow"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+
+							<iframe width="1265" height="520" src="https://www.youtube.com/embed/KK8AXp87t40"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+
+							<iframe width="1265" height="520" src="https://www.youtube.com/embed/XfX-m3Eg_Xc"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+
+							<iframe width="1265" height="520" src="https://www.youtube.com/embed/5a3HdVZN6hs"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+
+							<iframe width="1265" height="520" src="https://www.youtube.com/embed/FSXVcLD4dhU"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 								allowfullscreen></iframe>
 						</div>
 					</div>
