Updating music section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 					<li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
+					<li class="nav-item"><a class="nav-link" href="KND.html">Music</a></li>
 				</ul>
 			</div>
 		</div>
@@ -188,17 +189,48 @@
 							</a>
 						</div>
 						<div class="p-inner">
-							<h4>KND</h4>
-							<h6>My Project as an Artist</h6>
-							<div class="cat">Electronic Music</div>
-						</div>
+					<h4>KND Music Project</h4>
+					<h6>Electronic Music Producer & DJ</h6>
+					<div class="cat">Featured Tracks: 
+						<a href="https://open.spotify.com/track/1VLNiPDTTaRZNySGMsukbM" target="_blank">Muscida</a> | 
+						<a href="https://open.spotify.com/track/5JBHKjlpKaN9bRgfEo1Fwm" target="_blank">Zeta Draconis</a>
+					</div>
+				</div>
+			</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Music Section -->
+	<section class="site-section" id="section-music">
+		<div class="container">
+			<div class="row">
+				<div class="section-heading text-center col-md-12">
+					<h2>Featured <strong>Music</strong></h2>
+					<p>Explore my electronic music productions and DJ sets</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" 
+						src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1089948550&color=%23474747&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+				</div>
+				<div class="col-md-6">
+					<div class="music-links">
+						<h3>Listen on:</h3>
+						<ul>
+							<li><a href="https://open.spotify.com/artist/1qiGwPf5UswgSQYJ3w84nc" target="_blank">Spotify</a></li>
+							<li><a href="https://soundcloud.com/mauricio-drada-knd" target="_blank">SoundCloud</a></li>
+							<li><a href="https://www.beatport.com/artist/k-n-d/400425/tracks" target="_blank">Beatport</a></li>
+							<li><a href="KND.html">Full Music Portfolio →</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- .section -->
 
+	<!-- About Section -->
 	<section class="site-section" id="section-about">
 		<div class="container">
 			<div class="row mb-5 align-items-center">
